; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_dbus.c_bus_setup_system.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_dbus.c_bus_setup_system.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [32 x i8] c"/org/freedesktop/systemd1/agent\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"org.freedesktop.systemd1.Agent\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"Released\00", align 1
@signal_agent_released = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [51 x i8] c"Failed to request Released match on system bus: %m\00", align 1
@.str.4 = private unnamed_addr constant [38 x i8] c"Successfully connected to system bus.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @bus_setup_system to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bus_setup_system(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @assert(i32* %6)
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @assert(i32* %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i64 @MANAGER_IS_USER(i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %24

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* @signal_agent_released, align 4
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @sd_bus_match_signal_async(i32* %14, i32* null, i32* null, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 %15, i32* null, i32* %16)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %13
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @log_warning_errno(i32 %21, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.3, i64 0, i64 0))
  br label %23

23:                                               ; preds = %20, %13
  br label %24

24:                                               ; preds = %23, %2
  %25 = call i32 @log_debug(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.4, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i64 @MANAGER_IS_USER(i32*) #1

declare dso_local i32 @sd_bus_match_signal_async(i32*, i32*, i32*, i8*, i8*, i8*, i32, i32*, i32*) #1

declare dso_local i32 @log_warning_errno(i32, i8*) #1

declare dso_local i32 @log_debug(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
